# domain-package-exam

./: .gitignore  README.md  pyproject.toml
app-api/: main.py
babitalk-event-core/src/babitalk_event/: domain.py
src/babitalk_event/: __init__.py  domain.py  repository.py  service.py
